// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`oxfmt > invalid > Invalid #0: Should add semicolon at the end of statements when semi is true (default behavior) 1`] = `
[
  {
    "column": 27,
    "endColumn": 27,
    "endLine": 1,
    "fix": {
      "range": [
        26,
        26,
      ],
      "text": ";",
    },
    "line": 1,
    "message": "Insert \`;\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #1: Should remove semicolon at the end of statements when semi is false 1`] = `
[
  {
    "column": 22,
    "endColumn": 23,
    "endLine": 1,
    "fix": {
      "range": [
        21,
        22,
      ],
      "text": "",
    },
    "line": 1,
    "message": "Delete \`;\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #2: Should convert double quotes to single quotes when singleQuote is true 1`] = `
[
  {
    "column": 13,
    "endColumn": 26,
    "endLine": 1,
    "fix": {
      "range": [
        12,
        25,
      ],
      "text": "'hello world'",
    },
    "line": 1,
    "message": "Replace \`"hello·world"\` with \`'hello·world'\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #3: Should wrap long lines based on printWidth setting (40 characters) 1`] = `
[
  {
    "column": 5,
    "endColumn": 43,
    "endLine": 1,
    "fix": {
      "range": [
        4,
        42,
      ],
      "text": "
  reallyLongArg(),
  omgSoManyParameters(),
",
    },
    "line": 1,
    "message": "Replace \`reallyLongArg(),·omgSoManyParameters()\` with \`⏎··reallyLongArg(),⏎··omgSoManyParameters(),⏎\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #4: Should remove parentheses around single arrow function parameter when arrowParens is avoid 1`] = `
[
  {
    "column": 15,
    "endColumn": 18,
    "endLine": 1,
    "fix": {
      "range": [
        14,
        17,
      ],
      "text": "n",
    },
    "line": 1,
    "message": "Replace \`(n)\` with \`n\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #5: Should remove trailing commas from object literals when trailingComma is none 1`] = `
[
  {
    "column": 11,
    "endColumn": 12,
    "endLine": 3,
    "fix": {
      "range": [
        42,
        43,
      ],
      "text": "",
    },
    "line": 3,
    "message": "Delete \`,\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #6: Should remove unnecessary quotes from object property names when quoteProps is as-needed 1`] = `
[
  {
    "column": 3,
    "endColumn": 19,
    "endLine": 2,
    "fix": {
      "range": [
        19,
        35,
      ],
      "text": "name: "foobar",",
    },
    "line": 2,
    "message": "Replace \`"name":·"foobar"\` with \`name:·"foobar",\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #7: Should adjust indentation to 4 spaces per level when tabWidth is 4 1`] = `
[
  {
    "column": 3,
    "endColumn": 3,
    "endLine": 2,
    "fix": {
      "range": [
        20,
        20,
      ],
      "text": "  ",
    },
    "line": 2,
    "message": "Insert \`··\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #8: Should use tab characters for indentation instead of spaces when useTabs is true 1`] = `
[
  {
    "column": 1,
    "endColumn": 3,
    "endLine": 2,
    "fix": {
      "range": [
        18,
        20,
      ],
      "text": "	",
    },
    "line": 2,
    "message": "Replace \`··\` with \`↹\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #9: Should remove spaces inside object literal braces when bracketSpacing is false 1`] = `
[
  {
    "column": 14,
    "endColumn": 30,
    "endLine": 1,
    "fix": {
      "range": [
        13,
        29,
      ],
      "text": "name: "foobar"",
    },
    "line": 1,
    "message": "Replace \`·name:·"foobar"·\` with \`name:·"foobar"\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #10: Should use CRLF (\\r\\n) line endings instead of LF when endOfLine is crlf 1`] = `
[
  {
    "column": 13,
    "endColumn": 13,
    "endLine": 1,
    "fix": {
      "range": [
        12,
        12,
      ],
      "text": "
",
    },
    "line": 1,
    "message": "Insert \`␍\`",
    "messageId": "insert",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #11: Should use single quotes in JSX attributes when jsxSingleQuote is true 1`] = `
[
  {
    "column": 32,
    "endColumn": 43,
    "endLine": 1,
    "fix": {
      "range": [
        31,
        42,
      ],
      "text": "'container'",
    },
    "line": 1,
    "message": "Replace \`"container"\` with \`'container'\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #12: Should format JSX tags compactly on one line when possible with bracketSameLine enabled 1`] = `
[
  {
    "column": 21,
    "endColumn": 1,
    "endLine": 5,
    "fix": {
      "range": [
        20,
        55,
      ],
      "text": " className="container">Hello",
    },
    "line": 1,
    "message": "Replace \`⏎··className="container"⏎>⏎··Hello⏎\` with \`·className="container">Hello\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #13: Should put each JSX attribute on a separate line when singleAttributePerLine is true 1`] = `
[
  {
    "column": 17,
    "endColumn": 65,
    "endLine": 1,
    "fix": {
      "range": [
        16,
        64,
      ],
      "text": "(
  <div
    className="container"
    id="main"
  >
    Hello
  </div>
)",
    },
    "line": 1,
    "message": "Replace \`<div·className="container"·id="main">Hello</div>\` with \`(⏎··<div⏎····className="container"⏎····id="main"⏎··>⏎····Hello⏎··</div>⏎)\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #14: Should sort Tailwind CSS classes when experimentalTailwindcss is enabled 1`] = `
[
  {
    "column": 33,
    "endColumn": 61,
    "endLine": 1,
    "fix": {
      "range": [
        32,
        60,
      ],
      "text": "flex bg-red-500 px-2 text-lg",
    },
    "line": 1,
    "message": "Replace \`text-lg·bg-red-500·flex·px-2\` with \`flex·bg-red-500·px-2·text-lg\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #15: Should sort Tailwind classes for custom attributes when attributes option is provided 1`] = `
[
  {
    "column": 26,
    "endColumn": 54,
    "endLine": 1,
    "fix": {
      "range": [
        25,
        53,
      ],
      "text": "flex bg-red-500 px-2 text-lg",
    },
    "line": 1,
    "message": "Replace \`text-lg·bg-red-500·flex·px-2\` with \`flex·bg-red-500·px-2·text-lg\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #16: Should sort Tailwind classes inside custom functions when functions option is provided 1`] = `
[
  {
    "column": 17,
    "endColumn": 45,
    "endLine": 1,
    "fix": {
      "range": [
        16,
        44,
      ],
      "text": "flex bg-red-500 px-2 text-lg",
    },
    "line": 1,
    "message": "Replace \`text-lg·bg-red-500·flex·px-2\` with \`flex·bg-red-500·px-2·text-lg\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #17: Should retain duplicate classes when preserveDuplicates is true 1`] = `
[
  {
    "column": 33,
    "endColumn": 66,
    "endLine": 1,
    "fix": {
      "range": [
        32,
        65,
      ],
      "text": "flex bg-red-500 px-2 px-2 text-lg",
    },
    "line": 1,
    "message": "Replace \`text-lg·px-2·px-2·bg-red-500·flex\` with \`flex·bg-red-500·px-2·px-2·text-lg\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #18: Should format while respecting whitespace when preserveWhitespace is true 1`] = `
[
  {
    "column": 33,
    "endColumn": 64,
    "endLine": 1,
    "fix": {
      "range": [
        32,
        63,
      ],
      "text": "flex   bg-red-500  px-2 text-lg",
    },
    "line": 1,
    "message": "Replace \`text-lg···bg-red-500··flex·px-2\` with \`flex···bg-red-500··px-2·text-lg\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #19: Should reorder imports alphabetically when experimentalSortImports is enabled 1`] = `
[
  {
    "column": 8,
    "endColumn": 17,
    "endLine": 1,
    "fix": {
      "range": [
        7,
        16,
      ],
      "text": "a from "a",
    },
    "line": 1,
    "message": "Replace \`z·from·"z\` with \`a·from·"a\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
  {
    "column": 8,
    "endColumn": 17,
    "endLine": 2,
    "fix": {
      "range": [
        26,
        35,
      ],
      "text": "z from "z",
    },
    "line": 2,
    "message": "Replace \`a·from·"a\` with \`z·from·"z\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #20: Should sort package.json scripts when experimentalSortPackageJson is enabled 1`] = `
[
  {
    "column": 6,
    "endColumn": 23,
    "endLine": 4,
    "fix": {
      "range": [
        49,
        66,
      ],
      "text": "dev": "echo dev",
    },
    "line": 4,
    "message": "Replace \`lint":·"echo·lint\` with \`dev":·"echo·dev\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
  {
    "column": 6,
    "endColumn": 21,
    "endLine": 5,
    "fix": {
      "range": [
        74,
        89,
      ],
      "text": "lint": "echo lint",
    },
    "line": 5,
    "message": "Replace \`dev":·"echo·dev\` with \`lint":·"echo·lint\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;

exports[`oxfmt > invalid > Invalid #21: Should remove trailing comma when override for **/*.test.js sets trailingComma to none 1`] = `
[
  {
    "column": 9,
    "endColumn": 10,
    "endLine": 3,
    "fix": {
      "range": [
        32,
        33,
      ],
      "text": "",
    },
    "line": 3,
    "message": "Delete \`,\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "oxfmt",
    "severity": 2,
  },
]
`;
